Intermediate commit for Java 11 support.