@@ -1,8 +1,11 @@
 plugins {
+    id 'application'
+    id 'idea'
     id 'java'
     id 'maven'
     id "it.tellnet.sass" version "1.2"
     id "com.github.johnrengelman.shadow" version "4.0.2"
+    id 'org.openjfx.javafxplugin' version '0.0.6'
 }
 
 group = 'com.uddernetworks.mspaint'
@@ -10,10 +13,11 @@ version = '2.2.0-SNAPSHOT'
 
 description = "Programming in MS Paint"
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
+    options.compilerArgs << '--add-exports=java.management/sun.management=ALL-UNNAMED'
 }
 
 repositories {
@@ -26,6 +30,14 @@ sass {
     cssDir = 'src/main/resources'
 }
 
+idea {
+    module {
+        inheritOutputDirs = true
+    }
+}
+
+mainClassName = 'com.uddernetworks.mspaint.main.MainGUI'
+
 jar {
     manifest {
         attributes("Main-Class": "com.uddernetworks.mspaint.main.MainGUI")
@@ -33,18 +45,24 @@ jar {
     }
 }
 
+javafx {
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+applicationDefaultJvmArgs = ["--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED"]
+
 dependencies {
     compile group: 'com.intellij', name: 'forms_rt', version:'7.0.3'
-    compile(group: 'org.apache.tika', name: 'tika-parsers', version:'1.6') {
+    compile(group: 'org.apache.tika', name: 'tika-parsers', version:'1.20') {
         exclude(module: 'jhighlight')
     }
 
-    compile group: 'org.codelibs', name: 'jhighlight', version:'1.0.2'
-    compile group: 'com.jfoenix', name: 'jfoenix', version:'8.0.3'
+    compile group: 'org.codelibs', name: 'jhighlight', version:'1.0.3'
+    compile group: 'com.jfoenix', name: 'jfoenix', version:'9.0.8'
     compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
     compile 'com.uddernetworks.newocr:NewOCR:1.1.1'
     compile group: 'org.apache.xmlgraphics', name: 'batik-rasterizer', version: '1.10'
-    compile 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+    compile 'org.ocpsoft.prettytime:prettytime:4.0.2.Final'
 }
 
 task preLaunch << {
